# SideLB

./: .dockerignore  .env  .gitignore  COPYRIGHT  Cargo.toml  Docker_Binary_Builder  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  trigger.sh
.github/workflows/: build.yml
src/: main.rs
src/modules/: dns.rs  handlers.rs  load_balancer.rs  mod.rs  utils.rs
